@@ -11,7 +11,7 @@ use Text::Hunspell;
 use Test::Text::Sentence qw(split_sentences);
 use v5.22;
 
-use version; our $VERSION = qv('0.6.1'); # Works with UTF8 and includes Text::Sentence
+use version; our $VERSION = qv('0.6.2'); # Works with UTF8 and includes Text::Sentence
 
 use base 'Test::Builder::Module'; # Included in Test::Simple
 
@@ -106,8 +106,10 @@ sub just_check {
     my $dir = shift || croak "Need a directory with text" ;
     my $data_dir = shift || croak "No default spelling data directory\n";
     my $language = shift || "en_US"; # Defaults to English
+    my $call_done_testing = shift || 1; # Defaults to calling it
     my $tesxt = Test::Text->new($dir, $data_dir, $language, @_);
     $tesxt->check();
+    done_testing() if $call_done_testing;
 }
 
 sub done_testing {
