@@ -26,6 +26,3 @@ if ( !-e $text_dir ) {
 diag "Using $text_dir for text";
 
 just_check( $text_dir, $dict_dir); # procedural interface, exported by default
-
-
-done_testing;
